--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -29,7 +29,7 @@ main {
   text-align: left;
   box-sizing: border-box;
   @include layout(compact) {
-    max-width: none;
+    max-width: 100%;
     min-width: 320px;
   }
   p {
